infra/provider-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-gateway
  namespace: provider-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: provider-gateway
  ports:
    - name: http
      port: 9000
      targetPort: http
